--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -92,7 +92,7 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginBottom="12dp"
                 android:fontFamily="@font/spoqa_han_sans_regular"
-                android:text="> 보러가기"
+                android:text="> 바로가기"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView_bannerCircle"
@@ -173,11 +173,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/colorWhite"
-            android:drawableTop="@drawable/ic_person_24dp"
+            android:drawableTop="@drawable/ic_settings_24dp"
             android:drawablePadding="-12dp"
             android:fontFamily="@font/spoqa_han_sans_regular"
             android:paddingTop="12dp"
-            android:text="마이페이지"
+            android:text="설정"
             android:textColor="@color/colorTransparentBlack" />
 
     </LinearLayout>
