--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -108,6 +108,31 @@
             app:layout_constraintTop_toBottomOf="@+id/textView_alarm" />
 
         <TextView
+            android:id="@+id/textView_nutrientInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:text="식품 영양 정보"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView_border_02" />
+
+        <ImageView
+            android:id="@+id/imageView_border_03"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorTransparentBlack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_nutrientInfo" />
+
+        <TextView
             android:id="@+id/textView_sendOpinion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -120,10 +145,10 @@
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView_border_02" />
+            app:layout_constraintTop_toTopOf="@+id/imageView_border_03" />
 
         <ImageView
-            android:id="@+id/imageView_border_03"
+            android:id="@+id/imageView_border_04"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="16dp"
@@ -145,7 +170,7 @@
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView_border_03" />
+            app:layout_constraintTop_toTopOf="@+id/imageView_border_04" />
 
         <ImageView
             android:layout_width="match_parent"
