--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground">
@@ -15,8 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
-    <TextView
+        <TextView
             android:id="@+id/textView_toolBarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,6 +38,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_container">
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/coordinatorLayout_mainLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView_weatherIcon"
@@ -71,9 +78,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
+            android:fontFamily="@font/spoqa_han_sans_regular"
             android:text="- 현재 날씨 정보 -"
             android:textSize="15sp"
-            android:fontFamily="@font/spoqa_han_sans_regular"
             app:layout_constraintBottom_toBottomOf="@+id/imageView_weatherIcon"
             app:layout_constraintStart_toEndOf="@+id/textView_temperature"
             app:layout_constraintTop_toTopOf="@+id/imageView_weatherIcon" />
@@ -84,9 +91,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
+            android:fontFamily="@font/spoqa_han_sans_regular"
             android:text="- 도시 이름 -"
             android:textSize="12sp"
-            android:fontFamily="@font/spoqa_han_sans_regular"
             app:layout_constraintBottom_toBottomOf="@+id/imageView_weatherIcon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageView_weatherIcon" />
@@ -249,14 +256,14 @@
         android:layout_width="match_parent"
         android:layout_height="66dp"
         android:background="@color/colorWhite"
+        android:elevation="10dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:elevation="10dp">
+        app:layout_constraintStart_toStartOf="parent">
 
 
-    <Button
+        <Button
             android:id="@+id/button_home"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -264,11 +271,10 @@
             android:background="@color/colorWhite"
             android:drawableTop="@drawable/ic_home_24dp"
             android:drawablePadding="-12dp"
-            android:text="홈"
-            android:textColor="@color/colorTransparentBlack"
             android:fontFamily="@font/spoqa_han_sans_regular"
             android:paddingTop="12dp"
-            />
+            android:text="홈"
+            android:textColor="@color/colorTransparentBlack" />
 
         <Button
             android:id="@+id/button_calendar"
@@ -278,11 +284,10 @@
             android:background="@color/colorWhite"
             android:drawableTop="@drawable/ic_event_24dp"
             android:drawablePadding="-12dp"
-            android:text="캘린더"
-            android:textColor="@color/colorTransparentBlack"
             android:fontFamily="@font/spoqa_han_sans_regular"
             android:paddingTop="12dp"
-            />
+            android:text="캘린더"
+            android:textColor="@color/colorTransparentBlack" />
 
         <Button
             android:id="@+id/button_setting"
@@ -292,11 +297,10 @@
             android:background="@color/colorWhite"
             android:drawableTop="@drawable/ic_settings_24dp_selected"
             android:drawablePadding="-12dp"
-            android:text="설정"
-            android:textColor="@color/colorPrimary"
             android:fontFamily="@font/spoqa_han_sans_regular"
             android:paddingTop="12dp"
-            />
+            android:text="설정"
+            android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
 
