activity_home.xml, activity_calendar.xml, activity_setting.xml 파일에 button_map 추가 HomeActivity.class, CalendarActivity.class, SettingActivity.class 파일에 button_map 추가

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -168,6 +168,19 @@
             android:textColor="@color/colorTransparentBlack" />
 
         <Button
+            android:id="@+id/button_map"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorWhite"
+            android:drawableTop="@drawable/ic_map_24dp"
+            android:drawablePadding="-12dp"
+            android:fontFamily="@font/spoqa_han_sans_regular"
+            android:paddingTop="12dp"
+            android:text="지도"
+            android:textColor="@color/colorTransparentBlack" />
+
+        <Button
             android:id="@+id/button_myPage"
             android:layout_width="0dp"
             android:layout_height="match_parent"
