MapActivity.class 파일에 구글 맵에서 음식점 받아오는 기능 구현

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -48,7 +48,22 @@
         app:layout_constraintBottom_toBottomOf="@+id/fragment_mapView"
         app:layout_constraintEnd_toEndOf="@+id/fragment_mapView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_container" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_container" >
+
+        <Button
+            android:id="@+id/button_refresh"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:background="@drawable/round_rectangle_green_line"
+            android:text="이 위치에서 재검색하기"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12sp"
+            android:fontFamily="@font/spoqa_han_sans_bold"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp"/>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
     <LinearLayout
         android:id="@+id/bottom_navigation"
