CalendarActivity.class 파일에 onDayClick 메서드 구현

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -116,8 +116,8 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:compactCalendarBackgroundColor="@color/colorPrimary"
-        app:compactCalendarCurrentDayBackgroundColor="@color/colorTransparentBlack"
-        app:compactCalendarCurrentSelectedDayBackgroundColor="@color/colorTransparentWhite"
+        app:compactCalendarCurrentDayBackgroundColor="@color/colorTransparentWhite"
+        app:compactCalendarCurrentSelectedDayBackgroundColor="@color/colorAccent"
         app:compactCalendarMultiEventIndicatorColor="@color/colorAccent"
         app:compactCalendarTargetHeight="250dp"
         app:compactCalendarTextColor="@color/colorWhite"
