CalendarActivity.class 파일의 날짜 출력 방식 수정 activity_class.xml 파일의 리스트뷰 구분선 제거 item_calendarlist.xml 파일의 레이아웃 수정

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -130,6 +130,8 @@
         android:id="@+id/listView_calendar"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
+        android:dividerHeight="0px"
+        android:divider="@color/colorBackground"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
