--- a/app/src/main/res/layout/item_calendarlist.xml
+++ b/app/src/main/res/layout/item_calendarlist.xml
@@ -7,13 +7,16 @@
 
     <ImageView
         android:id="@+id/imageView_postImage"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:scaleType="centerCrop" />
+        app:srcCompat="@drawable/ic_launcher_background" />
 
     <LinearLayout
         app:layout_constraintBottom_toBottomOf="@+id/imageView_postImage"
