--- a/app/src/main/res/layout/activity_nutrient_info.xml
+++ b/app/src/main/res/layout/activity_nutrient_info.xml
@@ -30,7 +30,7 @@
             android:id="@+id/textView_toolBarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="글 제목"
+            android:text="식품 영양 정보"
             android:textSize="18sp"
             android:textColor="@color/colorPrimary"
             android:fontFamily="@font/spoqa_han_sans_regular"
