--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -106,7 +106,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView_alarm" />
 
         <TextView
-            android:id="@+id/textView_nutrientInfo"
+            android:id="@+id/textView_recipeInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -128,7 +128,7 @@
             android:background="@color/colorTransparentBlack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_nutrientInfo" />
+            app:layout_constraintTop_toBottomOf="@+id/textView_recipeInfo" />
 
         <TextView
             android:id="@+id/textView_sendOpinion"
