--- a/app/src/main/res/layout/activity_recipeinfo.xml
+++ b/app/src/main/res/layout/activity_recipeinfo.xml
@@ -42,7 +42,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ListView
-        android:id="@+id/listview_nutrientInfo"
+        android:id="@+id/listView_recipeInfo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
