--- a/app/src/main/res/layout/activity_recipeinfo.xml
+++ b/app/src/main/res/layout/activity_recipeinfo.xml
@@ -30,7 +30,7 @@
             android:id="@+id/textView_toolBarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="레시피 정보"
+            android:text="식사 메이트 뽑기"
             android:textSize="18sp"
             android:textColor="@color/colorPrimary"
             android:fontFamily="@font/spoqa_han_sans_regular"
@@ -42,7 +42,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ListView
-        android:id="@+id/listView_recipeInfo"
+        android:id="@+id/listView_contact"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
