activity_mealmate.xml 파일의 레이아웃 리소스 오타 수정(lottie_confetti) MealMateActivity.class 파일에 레이아웃 리소스 lottie_confetti 추가

--- a/app/src/main/res/layout/activity_mealmate.xml
+++ b/app/src/main/res/layout/activity_mealmate.xml
@@ -42,7 +42,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_confettie"
+        android:id="@+id/lottie_confetti"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/textView_contactInfo"
