--- a/app/src/main/res/layout/activity_mealmate.xml
+++ b/app/src/main/res/layout/activity_mealmate.xml
@@ -118,6 +118,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_contactInfo" />
 
+    <Button
+        android:id="@+id/button_sendMessage"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/round_rectangle_green_line"
+        android:fontFamily="@font/spoqa_han_sans_regular"
+        android:text="문자로 연락하기"
+        android:textColor="@color/colorPrimary"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_additionalInfo" />
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout_snackBarHolder"
         android:layout_width="match_parent"
@@ -125,7 +139,10 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/lottie_confetti" />
+        app:layout_constraintTop_toTopOf="@+id/lottie_confetti" >
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
