drawable 폴더에 icon_plate_128.png 파일 추가 activity_mealmate.xml 파일의 imageView_image 이미지 변경 (icon_questionmark_128.png -> icon_plate_129.png)

--- a/app/src/main/res/layout/activity_mealmate.xml
+++ b/app/src/main/res/layout/activity_mealmate.xml
@@ -58,7 +58,7 @@
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:layout_marginTop="128dp"
-        android:background="@drawable/icon_questionmark_128"
+        android:background="@drawable/icon_plate_128"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
